Frontend 2.2, Creado componente 'proveedor-agregar'