@@ -5,12 +5,12 @@ import com.corpomotriz.repuestos.dto.UsuarioDTO;
 import com.corpomotriz.repuestos.model.Usuario;
 import com.corpomotriz.repuestos.repository.UsuarioRepository;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class UsuarioService {
@@ -18,13 +18,10 @@ public class UsuarioService {
     @Autowired
     private UsuarioRepository usuarioRepository;
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
-
     public List<UsuarioDTO> getAllUsuarios() {
         return usuarioRepository.findAll().stream()
                 .map(this::toDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Optional<UsuarioDTO> getUsuarioById(Integer id) {
@@ -33,11 +30,14 @@ public class UsuarioService {
     }
 
     public UsuarioDTO createUser(UsuarioCrearDTO dto) {
+        if (usuarioRepository.findByEmail(dto.getEmail()).isPresent()) {
+            throw new RuntimeException("El email ya está registrado");
+        }
+
         Usuario usuario = Usuario.builder()
                 .nombre(dto.getNombre())
                 .email(dto.getEmail())
-                .contrasena(passwordEncoder.encode(dto.getContrasena()))
-                .rol(dto.getRol() != null ? dto.getRol() : "CLIENTE")
+                .contrasena(dto.getContrasena())  // sin encriptar (no recomendado)
                 .fechaCreacion(LocalDateTime.now())
                 .build();
 
@@ -49,7 +49,6 @@ public class UsuarioService {
                 .id(usuario.getId().intValue())
                 .nombre(usuario.getNombre())
                 .email(usuario.getEmail())
-                .rol(usuario.getRol())
                 .fechaCreacion(usuario.getFechaCreacion())
                 .build();
     }
